--- a/index.html
+++ b/index.html
@@ -97,20 +97,7 @@
 
 <div class="container">
 
-  <div class="card">
-    <h3>📊 Active Market #001</h3>
-    <p>
-      Will <strong>$DOGSHIT</strong> hit <strong>$10M</strong> market cap in 24 hours?
-    </p>
-    <p>
-      <span class="yes">YES</span> / <span class="no">NO</span>
-    </p>
-    <p>
-      ⏰ Closes: Jan 22, 18:00 UTC<br>
-      📍 Source: Pump.fun
-    </p>
-    <a class="btn" href="https://forms.gle/YOUR_FORM_LINK">Enter Prediction</a>
-  </div>
+  <div class="card" id="market"></div>
 
   <div class="card">
     <h3>🏆 Leaderboard</h3>
